<resources>
    <string name="empty" />
    <string name="vu_table">VU meter</string>
    <string name="exit">press again to exit application</string>
    <string name="searching_lan">searching Upnp devices on network…</string>
    <string name="ip_get_fail">fail to get IP</string>
    <string name="add_playlist">Add to playlist</string>
    <string name="app_name">FiiO Music</string>
    <string name="sd_card_lack">Please inset SDcard</string>
    <string name="playview_song_name">Title</string>
    <string name="playview_artist">Artist</string>
    <string name="scan_title">Scan for songs</string>
    <string name="btn_scan_ok">Scanning completed</string>
    <string name="btn_scan_add">Add Folder</string>
    <string name="scanning">Scanning…</string>
    <string name="file_dir_text">File Location</string>
    <string name="track_balance_text">0</string>
    <string name="scan_directory_title">Add to Scanning Directory</string>
    <string name="btn_scan_directory_goup">↑ Return</string>
    <string name="btn_san_directory_add">Add</string>
    <string name="btn_san_directory_back">Back</string>
    <string name="btn_list_random_music">Shuffle</string>
    <string name="click_search_network">Searching for server</string>
    <string name="skinsetting_title">Skin Customization</string>
    <string name="systemsetting_title">System Settings</string>
    <string name="exit_title">Exit</string>
    <string name="setting_title">Settings</string>
    <string name="brightness_title">Day Mode</string>
    <string name="darkness_title">Night Mode</string>
    <string name="sleep_title">Off Timer (music App)</string>
    <string name="setting_equalizer">Equalizer</string>
    <string name="equalizer_up">On</string>
    <string name="equalizer_reset">Reset</string>
    <string name="equalizer_array1">Custom</string>
    <string name="equalizer_array2">Blues</string>
    <string name="equalizer_array3">Blues</string>
    <string name="equalizer_array4">Dance</string>
    <string name="equalizer_array5">Jazz</string>
    <string name="equalizer_array6">Metal</string>
    <string name="equalizer_array7">Pop</string>
    <string name="equalizer_array8">Rock</string>
    <string name="equalizer_array9">Vocal</string>
    <string name="eq_disable">Off</string>
    <string name="cancle">Cancel</string>
    <string name="finsh">Completed</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="all">All</string>
    <string name="search_song">Search for songs</string>
    <string name="input_songName">Search for songs here</string>
    <string name="cancle_history">Clear History</string>
    <string name="sleep_mode">Off Timer (music App)</string>
    <string name="appwidget_labelname">FiiO Music(4x1)</string>
    <string name="appwidget_labelname_42">FiiO Music(4x2)</string>
    <string name="appwidget_labelname_44">FiiO Music(4x4)</string>
    <string name="min5">5min</string>
    <string name="min10">10min</string>
    <string name="min20">20min</string>
    <string name="min30">30min</string>
    <string name="min40">40min</string>
    <string name="min50">50min</string>
    <string name="min60">60min</string>
    <string name="min70">70min</string>
    <string name="min90">90min</string>
    <string name="minute">min</string>
    <string name="Default">30</string>
    <string name="SettingMaxVoice">Max Volume</string>
    <string name="SettingVoiceMax">120</string>
    <string name="SettingVoiceMin">10</string>
    <string name="scan">Scan</string>
    <string name="scan_all">Scan all</string>
    <string name="scan_custom">Scan selected folder(s)</string>
    <string name="filter_time_60">Ignore tracks shorter than 60s</string>
    <string name="filter_cue">.cue File Splliter</string>
    <string name="no_scan_amb_mid">Ignore AMR and MIDI tracks</string>
    <string name="audio_size_filter">Ignore tracks smaller than</string>
    <string name="scan_appoint">Select Folder(s)</string>
    <string name="select_all">Select All</string>
    <string name="limt_3M">3MB</string>
    <string name="limt_6M">6MB</string>
    <string name="limt_12M">12MB</string>
    <string name="song_unit">Track(s)</string>
    <string name="setting_individuation_dialog_title">Personalized Display</string>
    <string name="playlist">Playlists</string>
    <string name="default_song_list">Default Lists</string>
    <string name="my_love_song_list">Favorites</string>
    <string name="my_love_song_title">Favorites</string>
    <string name="local_music">Local Music</string>
    <string name="check_all_text">Select All</string>
    <string name="dlna">DLNA</string>
    <string name="recently_play">Recently Played</string>
    <string name="oftast_play">Most Played</string>
    <string name="recently_add">Recently Add</string>
    <string name="setting_about_app">About APP</string>
    <string name="fifo_app_version">Version V1.0</string>
    <string name="updata_version">Version Update</string>
    <string name="updata_current_version">The latest version</string>
    <string name="email">Email:</string>
    <string name="email_content">support@fiio.net</string>
    <string name="official_website">Official Website:</string>
    <string name="official_website_content">http://www.fiio.net/</string>
    <string name="attention_our">Follow us on:</string>
    <string name="attention_our_content">http://weibo.com/fiio</string>
    <string name="about_app_text">"FiiO and the FiiO® are registered trademarks of FiiO Electronics Co., Ltd. 
 All rights reserved."</string>
    <string name="entity_unit_mb">MB</string>
    <string name="Album">Album</string>
    <string name="Artist">Artist</string>
    <string name="Style">Genre</string>
    <string name="Folder">Folders</string>
    <string name="song_tytle_text">Title:</string>
    <string name="song_artist_text">Artist:</string>
    <string name="song_ablum_text">Album:</string>
    <string name="song_format_text">Format:</string>
    <string name="song_duration_text">Length:</string>
    <string name="song_size_text">File Size:</string>
    <string name="song_dir_text">Path:</string>
    <string name="create_text_list">Create</string>
    <string name="update_text_list">Update</string>
    <string name="this_name_is_exist">This name already exists!</string>
    <string name="input_songlist_name">Enter name for playlist</string>
    <string name="create_song_list">Create new playlist</string>
    <string name="setting_common_text">General</string>
    <string name="time_out_close_text">Off timer (music App)</string>
    <string name="havent_enable_text">Not Start</string>
    <string name="song_scan_text">Scan for songs</string>
    <string name="song_db_update_text">Media library update</string>
    <string name="dowload_dir_text">Download Location</string>
    <string name="private_duan_text">Cloud Service</string>
    <string name="individual_setting_text">UI personalization</string>
    <string name="seamless_playback">Gapless Playback</string>
    <string name="manual">Manual</string>
    <string name="automate">Auto</string>
    <string name="mamory_song">Last Song</string>
    <string name="mamory_location">Last Position</string>
    <string name="custom">Custom</string>
    <string name="line_ctrl">In-line remote</string>
    <string name="memoryplay">Resume</string>
    <string name="downloadstring">Download Path</string>
    <string name="song_classify">小屏歌曲分类方式</string>
    <string name="setting_play_text">播放</string>
    <string name="line_ctrl_text">线控</string>
    <string name="slide_play_text">无缝播放</string>
    <string name="folder_jump_song">文件夹跳曲</string>
    <string name="gain_value_text">增益</string>
    <string name="volume_gain_balance">声道平衡</string>
    <string name="memory_text">Memory</string>
    <string name="memory_play_text">Resume</string>
    <string name="default_volume_text">Default Volume</string>
    <string name="setting_volume_text">User Defined</string>
    <string name="dir_of_the_file">位置</string>
    <string name="the_max_volume_text">Max Volume</string>
    <string name="little_screen_song_diliver">小屏歌曲分类方式</string>
    <string name="folder_text">Folders</string>
    <string name="PrivateCloud">私有云</string>
    <string name="BaiduCloud">Baidu Cloud</string>
    <string name="DropBox">Dropbox</string>
    <string name="DLNA">DLNA</string>
    <string name="NAS">NAS</string>
    <string name="setting_other_text">Others</string>
    <string name="start_up_help_text">Help</string>
    <string name="about_app_tytle_text">About App</string>
    <string name="track_balance">Channel balance</string>
    <string name="track_balance_l30">L60</string>
    <string name="track_balance_r60">R60</string>
    <string name="bottom_time_text">00:00</string>
    <string name="bottom_time_diliver_text">-</string>
    <string name="eq_scale_db_12_p">+6db</string>
    <string name="eq_scale_db_12_f">-6db</string>
    <string name="fiio_music_0_text">0</string>
    <string name="main_song_name_text">歌名：小苹果</string>
    <string name="search_history_list">Search History</string>
    <string name="search_song_lrc_text">Search for Lyrics</string>
    <string name="bit_name_info_text">44kHz | 16bits | 128kbps</string>
    <string name="default_song_info_text">%1$dkHz | %2$dbits | %3$dkbps</string>
    <string name="song_id3_info">%1$dkHz | %2$dbits | %3$dkbps</string>
    <string name="song_id2_info">%1$dkHz | %2$dBits</string>
    <string name="dialog_notice_text">Notice</string>
    <string name="dialog_exit_notice_text">Do you want to exit?</string>
    <string name="dialog_exit_notice_noshutdown_text">Do you want to exit FiiO Music?</string>
    <string name="downloadString">Download location</string>
    <string name="default_sd_card_info_text">共32.92GB.29.05GB可用</string>
    <string name="downloadInner">Save to Internal Storage</string>
    <string name="downloadCard">Store to SD card</string>
    <string name="downloadOther">Specify Location</string>
    <string name="remain">remain</string>
    <string name="total">total</string>
    <string name="like_added_toast_text">Song already in list / CUE/ISO files cannot be added</string>
    <string name="list_added_toast_text">Track already in list</string>
    <string name="downloadPosition">"Present Location: FIIO APP/Music
Downloads and automatically downloaded songs will be stored in the new specified location. "</string>
    <string name="the_songname">Title:</string>
    <string name="the_artist">Artist:</string>
    <string name="_path">Path:</string>
    <string name="songinformation">Track Info</string>
    <string name="songname">Title:</string>
    <string name="unknow">Unknown</string>
    <string name="_album">Album:</string>
    <string name="_style">Genre:</string>
    <string name="_artist">Artist:</string>
    <string name="_year">Year:</string>
    <string name="_timelength">Length:</string>
    <string name="_size">File Size:</string>
    <string name="_format">Format:</string>
    <string name="bitrate">Bitrate:</string>
    <string name="sampleRate">Sample Rate:</string>
    <string name="_bitdepth">Bit Depth</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="online_feedback">Online feedback</string>
    <string name="online_feedback_commit">Commit</string>
    <string name="online_feedbck_product_suggestion">Suggestion</string>
    <string name="online_feedback_prgram_error_reporting">Bug</string>
    <string name="online_feedbck_ed_suggestion">Please leave your valuable feedback in English, and we will keep improving the firmware..</string>
    <string name="online_feedbck_ed_phone_email">Please enter your email.</string>
    <string name="online_feedback_text_curren">0</string>
    <string name="online_feedback_text_seperator">/</string>
    <string name="online_feedback_text_total">500</string>
</resources>