<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <Button android:id="@id/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_below="@id/textView" android:layout_alignParentEnd="true" />
    <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/finsh" android:layout_alignParentBottom="true" android:layout_alignParentStart="false" />
    <Button android:id="@id/but_prev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prev" android:layout_below="@id/button" android:layout_alignParentStart="true" />
    <Button android:id="@id/but_next" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next" android:layout_alignBottom="@id/but_prev" android:layout_alignEnd="@id/button" />
    <Button android:id="@id/but_play" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="41.0dip" android:text="@string/start" android:layout_below="@id/but_prev" android:layout_alignParentStart="true" />
    <Button android:id="@id/but_stop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pause" android:layout_alignBottom="@id/but_play" android:layout_alignParentEnd="true" />
</RelativeLayout>