<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:background="#ff595959" android:layout_width="280.0dip" android:layout_height="229.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_13" android:layout_marginTop="@dimen/margin_20" android:text="@string/SettingMaxVoice" />
    <SeekBar android:id="@id/maxVoiceSeerBar_id" android:layout_width="230.0dip" android:layout_height="wrap_content" android:maxHeight="4.0px" android:max="110" android:progressDrawable="@drawable/seekbar9_set_define" android:thumb="@drawable/icon9_thumb_sleep" android:layout_centerInParent="true" />
    <TextView android:textSize="11.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SettingVoiceMin" android:layout_below="@id/maxVoiceSeerBar_id" android:layout_alignLeft="@id/maxVoiceSeerBar_id" />
    <TextView android:textSize="11.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SettingVoiceMax" android:layout_below="@id/maxVoiceSeerBar_id" android:layout_alignRight="@id/maxVoiceSeerBar_id" />
    <TextView android:textSize="20.0sp" android:textColor="#ff1ba5fe" android:id="@id/maxVoice_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_75" android:text="@string/Default" android:layout_alignRight="@id/maxVoiceSeerBar_id" />
    <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/max_voice_cancel_id" android:background="@drawable/button_background_grivity" android:layout_width="127.0dip" android:layout_height="36.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="173.0dip" android:text="@string/cancle" />
    <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/max_voice_confirm_id" android:background="@drawable/button_background_blue" android:layout_width="127.0dip" android:layout_height="36.0dip" android:layout_marginLeft="143.0dip" android:layout_marginTop="173.0dip" android:text="@string/ok" />
</RelativeLayout>