<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/dialogBackground" android:layout_width="280.0dip" android:layout_height="310.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="54.0dip">
        <TextView android:textSize="15.0sp" android:textColor="@color/textcolor_d3" android:background="@color/background_special" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_13" android:layout_marginTop="@dimen/margin_20" android:text="@string/song_classify" />
    </RelativeLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="1.2999878dip" android:src="@drawable/line9_setting_alertdialog_sepline_l" />
    <RadioGroup android:layout_width="fill_parent" android:layout_height="177.1dip">
        <RadioButton android:textSize="13.0sp" android:textColor="@color/textcolor_cc_80" android:id="@id/lc_folder_id" android:paddingLeft="20.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="43.299988dip" android:button="@null" android:text="@string/Folder" android:drawableRight="@drawable/btn_setting_radiobutton_selector" />
        <ImageView android:layout_width="fill_parent" android:layout_height="1.2999878dip" android:src="@drawable/line9_setting_alertdialog_sepline_s" />
        <RadioButton android:textSize="13.0sp" android:textColor="@color/textcolor_cc_80" android:id="@id/lc_album_id" android:paddingLeft="20.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="43.299988dip" android:button="@null" android:text="@string/Album" android:drawableRight="@drawable/btn_setting_radiobutton_selector" />
        <ImageView android:layout_width="fill_parent" android:layout_height="1.2999878dip" android:src="@drawable/line9_setting_alertdialog_sepline_s" />
        <RadioButton android:textSize="13.0sp" android:textColor="@color/textcolor_cc_80" android:id="@id/lc_artist_id" android:paddingLeft="20.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="43.299988dip" android:button="@null" android:text="@string/Artist" android:drawableRight="@drawable/btn_setting_radiobutton_selector" />
        <ImageView android:layout_width="fill_parent" android:layout_height="1.2999878dip" android:src="@drawable/line9_setting_alertdialog_sepline_s" />
        <RadioButton android:textSize="13.0sp" android:textColor="@color/textcolor_cc_80" android:id="@id/lc_style_id" android:paddingLeft="20.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="43.299988dip" android:button="@null" android:text="@string/Style" android:drawableRight="@drawable/btn_setting_radiobutton_selector" />
    </RadioGroup>
    <ImageView android:layout_width="fill_parent" android:layout_height="1.2999878dip" android:src="@drawable/line9_setting_alertdialog_sepline_s" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="75.32999dip">
        <Button android:textSize="15.0sp" android:textColor="#ffcccccc" android:id="@id/list_classify_cancel_id" android:background="#ff566e8a" android:layout_width="127.0dip" android:layout_height="36.0dip" android:layout_marginLeft="9.329987dip" android:text="@string/cancle" android:layout_centerVertical="true" />
        <Button android:textSize="15.0sp" android:textColor="#ffcccccc" android:id="@id/list_classify_confirm_id" android:background="#ff566e8a" android:layout_width="127.0dip" android:layout_height="36.0dip" android:layout_marginLeft="143.32999dip" android:text="@string/ok" android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>