<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_size_9" android:textColor="@color/c7b7b7b" android:id="@id/scale_12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_9" android:text="@string/eq_scale_db_12_p" />
    <ImageView android:id="@id/img_scale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_5" android:src="@drawable/btn_eq_scale3" android:layout_below="@id/scale_12" />
    <TextView android:textSize="@dimen/text_size_9" android:textColor="@color/c7b7b7b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_5" android:text="@string/fiio_music_0_text" android:layout_toRightOf="@id/img_scale" android:layout_centerVertical="true" />
    <TextView android:textSize="@dimen/text_size_9" android:textColor="@color/c7b7b7b" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_9" android:layout_marginTop="@dimen/margin_5" android:text="@string/eq_scale_db_12_f" android:layout_below="@id/img_scale" />
</RelativeLayout>